<resources>
    <string name="app_name">DoItNow</string>

    <!--    SplashActivity-->
    <string name="btn_splash_skip">跳过 3</string>
    <string name="tv_splash">DO IT NOW</string>

    <!--    LoginActivity-->
    <string name="edt_name_login">用户名</string>
    <string name="edt_pwd_login">密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="toast_empty_input_login">用户名或密码为空</string>
    <string name="toast_success_register">注册成功，正在处理信息</string>
    <string name="toast_fail_login">用户名或密码错误</string>

    <!--    MainActivity Menu-->
    <string name="rg_clock_main">番茄</string>
    <string name="rb_square_main">广场</string>
    <string name="rb_flag_main">目标</string>
    <string name="rg_mine_main">我的</string>

    <!--    MineFragment-->
    <string name="tv_name_mine">无名的今日君</string>
    <string name="tv_autograph_mine">今日行一事，明日少亿事</string>
    <string name="tv_world_mine">我的世界</string>
    <string name="tv_achievement_mine">我的成就</string>
    <string name="tv_gather_mine">我的围观</string>
    <string name="tv_setting_mine">我的设置</string>
    <string name="tv_pattern_mine">夜间模式</string>
    <string name="btn_sign_out_mine">退出登录</string>

    <!--    SquareFragment Article-->
    <string name="tv_name_article">今天必行flag君</string>
    <string name="tv_type_article">今日亿事</string>
    <string name="tv_title_article">关于那些不得不说关于美食的事情</string>
    <string name="tv_content_article">美食是具色香味共美之食，品之能给予自身一种愉悦之情，一种享受之感</string>
    <string name="btn_gather_article">围观flag</string>
    <string name="tv_comment_article">快来写点什么评论一下吧</string>

    <!--    SquareFragment Axis-->
    <string name="tv_date_axis_article">2020–5–20 13:14:00</string>

    <!--    SquareFragment-->
    <string name="tv_search_square">查找你感兴趣的flag</string>

    <!--    ClockFragment-->
    <string name="tv_event_clock">+ 添加事件</string>
    <string name="tv_time_clock">25:00</string>
    <string name="btn_one_clock">25min</string>
    <string name="btn_two_clock">50min</string>
    <string name="btn_three_clock">75min</string>
    <string name="btn_operate_clock">开始</string>
    <string name="btn_stop_clock">停止</string>
    <string name="toast_end_time">学习任务已关闭</string>

    <!--    FlagFragment-->
    <string name="tv_name_flag">DO IT NOW</string>
    <string name="tv_content_flag">每日阅读半小时</string>

    <!--    MineFragment MyWorld-->
    <string name="tv_title_world">我的世界</string>
    <string name="tv_change_name_world">修改用户名</string>
    <string name="tv_change_password_world">修改密码</string>
    <string name="tv_change_avatar_world">修改头像</string>
    <string name="tv_change_autograph_world">修改签名</string>
    <string name="tv_title_autograph">修改签名</string>
    <string name="tv_hint_autograph">请输入新的签名：</string>
    <string name="btn_autograph">确认修改</string>
    <string name="tv_new_password">输入新密码</string>
    <string name="tv_check_new_password">再次输入</string>
    <string name="tv_title_password">修改密码</string>

    <!--MineFragment Gather-->
    <string name="tv_title_gather">我的围观</string>

    <!--    FlagFragment -->
    <string name="tv_target_flag">目标</string>
    <string name="toast_show_error">抱歉，此地还在开发中</string>

    <!--    TodayActivity-->
    <string name="btn_cancel_today">取消</string>
    <string name="tv_title_today">今日待办</string>
    <string name="tv_title_habit">习惯21日</string>
    <string name="tv_name_today">待办事件名称：</string>
    <string name="tv_name_habit">习惯名称：</string>
    <string name="edt_name_today">今日行一事，明日少亿事</string>
    <string name="edt_name_habit">21日习惯的养成手册</string>
    <string name="tv_tag_today">事件标签：</string>
    <string name="tv_tag_flag">学习</string>
    <string name="tv_study_tag_flag">学习</string>
    <string name="tv_review_tag_flag">复习</string>
    <string name="tv_work_tag_flag">工作</string>
    <string name="tv_excise_tag_flag">锻炼</string>
    <string name="tv_hint_content_today">待办事件内容：</string>
    <string name="tv_hint_content_habit">习惯养成内容：</string>
    <string name="btn_accomplish_flag">完 成</string>
    <string name="tv_publish_flag">公开到广场</string>
    <string name="edt_content_habit">在21日打败拖延，慢慢习惯自律的生活，养成的不只是习惯，还是一个不败懒散的英雄</string>
    <string name="tv_info_habit">*习惯养成21天，需要持续打卡21天，养成一个习惯</string>


</resources>
