<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/common_toolbar"/>

    <TextView
        android:id="@+id/tv_name_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/tv_name_today"
        android:textSize="17sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_name_today"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bg_item_flag"
        android:hint="@string/edt_name_today"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="17sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_tag_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="15dp"
            android:text="@string/tv_tag_today"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/study_tag" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_study_tag_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableStart="@drawable/study_tag"
            android:drawablePadding="5dp"
            android:text="@string/tv_study_tag_flag"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_review_tag_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableStart="@drawable/review_tag"
            android:drawablePadding="5dp"
            android:text="@string/tv_review_tag_flag"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_work_tag_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableStart="@drawable/work_tag"
            android:drawablePadding="5dp"
            android:text="@string/tv_work_tag_flag"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_exercise_tag_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableStart="@drawable/excise_tag"
            android:drawablePadding="5dp"
            android:text="@string/tv_excise_tag_flag"
            android:textSize="17sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_hint_content_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/tv_hint_content_today"
        android:textSize="17sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:maxLines="20"
        android:maxEms="200"
        android:background="@drawable/bg_item_flag"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <TextView
            android:id="@+id/tv_publish_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/s_publish_today"
            android:layout_marginEnd="8dp"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:text="@string/tv_publish_flag" />

        <Switch
            android:id="@+id/s_publish_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_accomplish_today"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_mine_sign_out"
        android:text="@string/btn_accomplish_flag"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"/>

</androidx.appcompat.widget.LinearLayoutCompat>