<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="3dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="3dp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp"
    app:contentPaddingBottom="5dp"
    app:contentPaddingLeft="12dp"
    app:contentPaddingRight="12dp"
    app:contentPaddingTop="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_portrait_article"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/add"
            app:layout_constraintBottom_toTopOf="@id/tv_title_article"
            app:layout_constraintEnd_toStartOf="@id/tv_name_article"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxEms="10"
            android:text="@string/tv_name_article"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tv_title_article"
            app:layout_constraintStart_toEndOf="@id/img_portrait_article"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/tv_date_axis_article"
            android:textColor="@color/colorText"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/tv_title_article"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/tv_title_article"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/tv_content_article"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_portrait_article" />

        <TextView
            android:id="@+id/tv_content_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/tv_content_article"
            android:textColor="@color/colorText"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_article" />

        <Button
            android:id="@+id/btn_square"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_mine_sign_out"
            android:text="@string/btn_gather_article"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>