<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/tb_back_article"
        layout="@layout/common_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_details_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_back_article"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="5dp"
        android:paddingEnd="8dp"
        android:paddingBottom="5dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_portrait_article"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/add"
            app:layout_constraintBottom_toTopOf="@id/tv_title_article"
            app:layout_constraintEnd_toStartOf="@id/tv_name_article"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxEms="16"
            android:text="@string/tv_name_article"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tv_title_article"
            app:layout_constraintStart_toEndOf="@id/img_portrait_article"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_type_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/tv_type_article"
            android:textColor="@color/colorText"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/tv_title_article"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_title_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_title_article"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/tv_content_article"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_portrait_article" />

        <TextView
            android:id="@+id/tv_content_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/tv_content_article"
            android:textColor="@color/colorText"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_article" />

        <Button
            android:id="@+id/btn_gather_article"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_mine_sign_out"
            android:text="@string/btn_gather_article"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_content_article" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_article"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cl_details_article"
        android:layout_marginTop="5dp" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_comment_article"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@color/colorGrey" />


        <TextView
            android:id="@+id/tv_comment_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="8"
            android:background="@drawable/bg_enter_comment"
            android:paddingStart="18dp"
            android:paddingTop="8dp"
            android:paddingEnd="18dp"
            android:paddingBottom="5dp"
            android:text="@string/tv_comment_article" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>