<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include layout="@layout/common_toolbar"
        android:id="@+id/tool_bar_password"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_new_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@null"
        android:hint="@string/tv_new_password"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorText"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar_password" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorGrey"
        app:layout_constraintTop_toBottomOf="@id/edt_new_password" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_check_new_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@null"
        android:hint="@string/tv_check_new_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorText"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/edt_new_password" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorGrey"
        app:layout_constraintTop_toBottomOf="@id/edt_check_new_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_login"
        android:text="@string/btn_login"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_check_new_password" />

</androidx.constraintlayout.widget.ConstraintLayout>