<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <RelativeLayout
        android:id="@+id/rl_change_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tv_change_password_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/tv_change_password_world"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_change_password_world"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/more_item" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_change_avatar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tv_change_avatar_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/tv_change_avatar_world"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_change_avatar_world"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/more_item" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_change_autograph"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tv_change_autograph_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/tv_change_autograph_world"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_change_autograph_world"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/more_item" />
    </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>